<resources>
    <string name="app_name">Deskneed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_maps">Map</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="contact">Contact</string>
    <string name="company_details">Company Details</string>
    <string name="all_rides">All Rides</string>
    <string name="ride">Ride</string>
    <string name="attendance">Attendance</string>
    <string name="user_info">User Info</string>
    <string name="communication">Communication</string>
    <string name="user_information">User Information</string>
    <string name="salary_details">Salary Details</string>
    <string name="tasks_and_assignment">Tasks and Assignment</string>
    <string name="home_activity_content">HOME ACTIVITY CONTENT</string>
    <string name="edit">Edit</string>
    <string name="employee_details">Employee Details</string>
    <string name="employee_id">Employee ID</string>
    <string name="employee_name">Employee Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="employee_salary">Employee Salary</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="phone_number">phone number</string>
    <string name="passwords">Passwords</string>
    <string name="login">Login</string>
    <string name="punch_in">Punch In</string>
    <string name="punch_out">punch_out</string>
    <string name="date">DATE</string>
    <string name="attmark">attendance Marked</string>
    <string name="puncin">punchout not done!</string>
    <string name="pucout">punchin not done!</string>
    <string name="contacts">CONTACTS</string>
    <string name="deskneed">DESKNEED</string>
    <string name="billing_details">Billing Details :</string>
    <string name="gstin">GSTIN : </string>
    <string name="_18aaxcs9739a1zo">18AAXCS9739A1ZO</string>
    <string name="email">Email</string>
    <string name="emails">Email : </string>
    <string name="contact_deskneed_com">contact@deskneed.com</string>
    <string name="phone_numbera">Phone Number : </string>
    <string name="_91_9954_683_549">+91 9954 683 549</string>
    <string name="cin">CIN : </string>
    <string name="u74999mp2016ptc041773">U74999MP2016PTC041773</string>
    <string name="dipp">DIPP</string>
    <string name="dipps">DIPP : </string>
    <string name="dipp1842">DIPP1842</string>
    <string name="gst">GST : </string>
    <string name="msme_uam_no">MSME UAM NO : </string>
    <string name="as03d0001520">AS03D0001520</string>
    <string name="company_bank_details">Company Bank Details :</string>
    <string name="account_no">Account No. : </string>
    <string name="_39010200000238">39010200000238</string>
    <string name="ifsc">IFSC : </string>
    <string name="barb0ambari">BARB0AMBARI</string>
    <string name="bank_name">Bank Name : </string>
    <string name="bank_of_baroda">Bank Of Baroda</string>
    <string name="branch">Branch : </string>
    <string name="ambari">Ambari</string>
    <string name="addresss">Address : </string>
    <string name="report">Report</string>
    <string name="designation">Designation</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="ride_details">Ride Details</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="last_ride">last ride</string>
    <string name="trips">trips</string>
    <string name="distance_travelled">Distance travelled</string>
    <string name="duration">Duration</string>
    <string name="company_info">Company Info</string>
    <string name="attendance_status">Attendance Status</string>
    <string name="change_password">Change Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">CONFIRM</string>
    <string name="date_picker">Date Picker</string>
    <string name="september">september</string>
    <string name="rs_12000">rs_12000</string>
    <string name="paid">PAID</string>
    <string name="_000000">000000</string>
    <string name="present_salary">Present Salary</string>
    <string name="title_activity_maps2">Map</string>
    <string name="absent">ABSENT</string>
    <string name="punched_in_home">PUNCHED IN</string>
    <string name="punched_out_home">PUNCHED OUT</string>
    <string name="mark_attendace">MARK ATTENDANCE</string>
    <string name="active">active</string>
    <string name="archieve">archieve</string>

    <string-array name="drop_down">
        <item>Slip no.</item>
        <item>Priority</item>
        <item>Slip Date</item>
        <item>Customer</item>
        <item>Requirement</item>
        <item>Vendor</item>
        <item>Current Status</item>
        <item>Next Date</item>
        <item>Current Department</item>
        <item>Current Employee</item>
    </string-array>

    <string-array name="drop_down2">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>

    </string-array>

</resources>
