<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChagePawwordActivity">
<androidx.cardview.widget.CardView
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:elevation="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="25sp"
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <EditText
                android:inputType="phone"
                android:id="@+id/phonenochage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <EditText

                android:id="@+id/passwordchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <EditText
                android:id="@+id/confirmpasswordchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/changedbutt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/confirm"
            android:layout_marginBottom="30dp"
            android:elevation="6dp"
            />
    </LinearLayout>
</androidx.cardview.widget.CardView>
</LinearLayout>